[feat] Add success stories bg. Fix horizontal scroll bug

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $black: #000000;
 
 $bg-light: #e9ddcf;
 $bg-dark: #07424d;
+$secondary-dark: #104751;
 
 $primary: #079cff;
 
